# conways-game-of-life

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Pipfile  README.md  life.py  state_beacon.txt  state_glider.txt  state_penta_decathlon.txt  state_toad.txt
src/: lib.rs  life.rs  life_image.rs  main.rs
