[package]
name = "life"
description = "Conway's Game of Life"
version = "0.1.0"
authors = ["Humberto Correia <correia.humberto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "life"
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#the-crate-type-field
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["cdylib", "staticlib"]

[dependencies]
rand = "0.7"
libc = "0.2"
