[package]
name = "life"
description = "Conway's Game of Life"
version = "0.1.0"
authors = ["Humberto Correia <correia.humberto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "life"
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#the-crate-type-field
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["cdylib", "staticlib"]

[dependencies]
rand = "0.7"
libc = "0.2"
threadpool = "1.0"
axum = { version = "0.7.4", features = ["ws"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.30"
image = "0.24.9"
base64 = "0.22.0"
